force-app/main/default/objects/BloctelHistory__c/BloctelHistory__c.object-meta.xml
<CustomObject>
    <description>Objet permettant de stocker les informations des traitements Bloctel effectués</description>
    <label>Historique Bloctel</label>
    <nameField>
        <displayFormat>BHIS/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques Bloctel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>