force-app/main/default/objects/BloctelHistory__c/fields/exportDate__c.field-meta.xml
<CustomField>
    <fullName>exportDate__c</fullName>
    <label>Date de l&apos;export</label>
    <type>DateTime</type>
</CustomField>