force-app/main/default/objects/BloctelHistory__c/fields/fileName__c.field-meta.xml
<CustomField>
    <fullName>fileName__c</fullName>
    <description>Clé reprenant la date au format &quot;yyyyMMddHHmmss&quot; pour identifier le fichier CSV à récupérer dans le FTP Bloctel</description>
    <label>Nom du fichier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>