force-app/main/default/objects/BloctelHistory__c/fields/finished__c.field-meta.xml
<CustomField>
    <fullName>finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traité</label>
    <type>Checkbox</type>
</CustomField>