force-app/main/default/objects/BloctelHistory__c/fields/importDate__c.field-meta.xml
<CustomField>
    <fullName>importDate__c</fullName>
    <label>Date de l&apos;import</label>
    <type>DateTime</type>
</CustomField>