force-app/main/default/objects/BloctelHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>exportDate__c</columns>
    <columns>importDate__c</columns>
    <columns>fileName__c</columns>
    <columns>finished__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>